--- a/app/src/main/res/layout/speech_slot_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_list_item.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="speechSlot" type="com.panoprogramowanie.boilingfrogs.model.SpeechSlot"/>
+    </data>
+
+
+<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -17,14 +23,16 @@
                 android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+        android:text="@{speechSlot.timeLabel}"/>
         <TextView
                 android:id="@+id/speech_slot_path"
                 android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:textSize="12sp"
-                android:textColor="@color/gray"/>
+                android:textColor="@color/gray"
+        android:text="@{speechSlot.favoriteSpeech.getPathStringIfHasDescription}"/>
     </LinearLayout>
     <android.support.v7.widget.CardView
             android:id="@+id/card_view"
@@ -49,7 +57,10 @@
                     android:layout_height="80dp"
                     app:riv_corner_radius="8dp"
                     app:riv_border_width="0dp"
-                    android:scaleType="centerCrop"/>
+                    android:scaleType="centerCrop"
+                    app:imageUrl="@{speechSlot.favoriteSpeech.speaker.photoUrl}"
+                    app:placeholder="@{@drawable/avatar_placeholder}"
+            />
             <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -70,7 +81,8 @@
                     android:layout_marginTop="8dp"
                     android:maxLines="2"
                     android:textColor="@color/white"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+            android:text="@{speechSlot.favoriteSpeech.title}"/>
 
             <TextView
                     android:id="@+id/subtitle"
@@ -80,7 +92,8 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="8dp"
                     android:maxLines="1"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    android:text="@{speechSlot.favoriteSpeech.speaker.name}"/>
 
             <View
                     android:id="@+id/empty_view"
@@ -91,3 +104,4 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
+</layout>
