--- a/app/src/main/res/layout/speech_slot_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_list_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:id="@+id/speech_slot_container"
         android:paddingLeft="8dp">
 
     <LinearLayout
@@ -19,14 +20,12 @@
             android:gravity="center"
             android:orientation="vertical">
         <TextView
-                android:id="@+id/speech_slot_time"
                 android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textStyle="bold"
         android:text="@{speechSlot.timeLabel}"/>
         <TextView
-                android:id="@+id/speech_slot_path"
                 android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
@@ -35,7 +34,6 @@
         android:text="@{speechSlot.favoriteSpeech.getPathStringIfHasDescription}"/>
     </LinearLayout>
     <android.support.v7.widget.CardView
-            android:id="@+id/card_view"
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,7 +69,6 @@
                     android:background="@drawable/my_schedule_speaker_overlay"/>
 
             <TextView
-                    android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -85,7 +82,6 @@
             android:text="@{speechSlot.favoriteSpeech.title}"/>
 
             <TextView
-                    android:id="@+id/subtitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/empty_view"
