--- a/app/src/main/res/layout/speakers_list_item.xml
+++ b/app/src/main/res/layout/speakers_list_item.xml
@@ -1,47 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.panoprogramowanie.boilingfrogs.ui.list.ListItemModelView
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:paddingRight="8dp"
-        android:orientation="vertical">
-
-    <LinearLayout
-            android:id="@+id/avatar_wrapper"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp">
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/photo"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                app:civ_border_color="@color/colorPrimary"
-                app:civ_border_width="4dp"/>
-    </LinearLayout>
-
-    <TextView
-            android:id="@+id/title"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <import type="android.view.Gravity"/>
+        <import type="android.view.View"/>
+        <variable name="itemModel" type="com.panoprogramowanie.boilingfrogs.ui.list.ListItemModel"/>
+    </data>
+    <RelativeLayout
+            android:id="@+id/speaker_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/avatar_wrapper"
-            android:layout_marginTop="8dp"
-            android:layout_toRightOf="@+id/avatar_wrapper"
-            android:maxLines="2"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:paddingRight="8dp"
+            android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/subtitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/avatar_wrapper"
-            android:layout_marginBottom="8dp"
-            android:layout_toRightOf="@+id/avatar_wrapper"
-            android:maxLines="1"
-            android:textColor="@color/gray"/>
-</com.panoprogramowanie.boilingfrogs.ui.list.ListItemModelView>
+        <LinearLayout
+                android:id="@+id/avatar_wrapper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp">
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:visibility="@{itemModel.photoUrl==null ? View.GONE : View.VISIBLE}"
+                    app:civ_border_color="@color/colorPrimary"
+                    app:civ_border_width="4dp"
+                    app:imageUrl="@{itemModel.photoUrl}"
+                    app:placeholder="@{@drawable/avatar_placeholder}"
+            />
+        </LinearLayout>
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/avatar_wrapper"
+                android:layout_marginTop="8dp"
+                android:layout_toRightOf="@+id/avatar_wrapper"
+                android:maxLines="2"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+        android:text="@{itemModel.title}"
+        android:gravity="@{itemModel.photoUrl==null ? Gravity.CENTER : Gravity.LEFT}"/>
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/avatar_wrapper"
+                android:layout_marginBottom="8dp"
+                android:layout_toRightOf="@+id/avatar_wrapper"
+                android:maxLines="1"
+                android:textColor="@color/gray"
+                android:text="@{itemModel.subtitle}"
+                android:gravity="@{itemModel.photoUrl==null ? Gravity.CENTER : Gravity.LEFT}"/>
+    </RelativeLayout>
+</layout>
