--- a/app/src/main/res/layout/speech_slot_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_list_item.xml
@@ -31,7 +31,7 @@
                 android:gravity="left"
                 android:textSize="12sp"
                 android:textColor="@color/gray"
-        android:text="@{speechSlot.favoriteSpeech.getPathStringIfHasDescription}"/>
+        android:text="@{speechSlot.favoriteOrOnlySpeech.getPathStringIfHasDescription}"/>
     </LinearLayout>
     <android.support.v7.widget.CardView
             android:layout_gravity="center"
@@ -56,7 +56,7 @@
                     app:riv_corner_radius="8dp"
                     app:riv_border_width="0dp"
                     android:scaleType="centerCrop"
-                    app:imageUrl="@{speechSlot.favoriteSpeech.speaker.photoUrl}"
+                    app:imageUrl="@{speechSlot.favoriteOrOnlySpeech.speaker.photoUrl}"
                     app:placeholder="@{@drawable/avatar_placeholder}"
             />
             <View
@@ -79,7 +79,7 @@
                     android:maxLines="2"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-            android:text="@{speechSlot.favoriteSpeech.title}"/>
+            android:text="@{speechSlot.favoriteOrOnlySpeech.title}"/>
 
             <TextView
                     android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                     android:layout_marginLeft="8dp"
                     android:maxLines="1"
                     android:textColor="@color/white"
-                    android:text="@{speechSlot.favoriteSpeech.speaker.name}"/>
+                    android:text="@{speechSlot.favoriteOrOnlySpeech.speaker.name}"/>
 
             <View
                     android:id="@+id/empty_view"
