--- a/app/src/main/res/layout/speech_slot_list_item.xml
+++ b/app/src/main/res/layout/speech_slot_list_item.xml
@@ -31,7 +31,7 @@
                 android:gravity="left"
                 android:textSize="12sp"
                 android:textColor="@color/gray"
-        android:text="@{speechSlot.favoriteOrOnlySpeech.getPathStringIfHasDescription}"/>
+                app:speechLocationIfNonEmpty="@{speechSlot.favoriteOrOnlySpeech}"/>
     </LinearLayout>
     <android.support.v7.widget.CardView
             android:layout_gravity="center"
