--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="twitter_feed_url">https://twitter.com/hashtag/boilingfrogs19</string>
+    <string name="twitter_feed_url">https://twitter.com/hashtag/boilingfrogs20</string>
     <string name="navigation_url">google.navigation:q=Wrocławskie+Centrum+Kongresowe+(RCTB),Wrocław</string>
-    <string name="survey_url">https://2019.boilingfrogs.pl/ankieta</string>
-    <string name="schedule_server_url">https://2019.boilingfrogs.pl/api/</string>
+    <string name="survey_url">https://2020.boilingfrogs.pl/ankieta</string>
+    <string name="schedule_server_url">https://2020.boilingfrogs.pl/</string>
 </resources>
