--- a/app/src/main/res/layout/speech_activity.xml
+++ b/app/src/main/res/layout/speech_activity.xml
@@ -7,18 +7,16 @@
     <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true">
+            android:fitsSystemWindows="false">
         <android.support.design.widget.AppBarLayout
                 android:id="@+id/appbar"
                 android:layout_width="match_parent"
-                android:layout_height="192dp"
-                android:fitsSystemWindows="true"
+                android:layout_height="wrap_content"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
             <android.support.design.widget.CollapsingToolbarLayout
                     android:id="@+id/collapsing_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
+                    android:layout_height="wrap_content"
                     app:contentScrim="?attr/colorPrimary"
                     app:expandedTitleMarginBottom="32dp"
                     app:expandedTitleMarginEnd="64dp"
@@ -26,9 +24,9 @@
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
                 <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fitsSystemWindows="true"
+                        android:layout_height="wrap_content"
                         android:scaleType="centerCrop"
+                        android:adjustViewBounds="true"
                         app:layout_collapseMode="parallax"
                         app:imageUrl="@{speaker.photoUrl}"
                         app:placeholder="@{@drawable/avatar_placeholder}"/>
